[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
hmac = "0.12.1"
rand = "0.8.5"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
bytes = "1.9.0"
uuid = { version = "1.11.0", features = ["v4"] }
